# distbuilder3

./: .clang-format  .gitignore  AGENTS.md  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  LICENSE  about_condition.md  deps.json  readme.md
app/: CMakeLists.txt  distbuilder.in.conf
app/include/roah/distb/: errors.hpp  logger.hpp  working_context.hpp
app/include/roah/distb/config/: condition.hpp  data_node_view.hpp,bkup  dependency_spec.hpp  library.hpp  library_entry.hpp  option_value.hpp  step_def.hpp  variables.hpp
app/include/roah/distb/utils/: base32.hpp  delay_copyable_container.hpp  hash.hpp  option_value.hpp  path.hpp  string.hpp  string_expander.hpp  subprocess.hpp
app/src/: errors.cpp  logger.cpp  main.cpp  working_context.cpp
app/src/app/: access_token.cpp  access_token.hpp  app.cpp  app.hpp  app_config.cpp  app_config.hpp  app_config_platform.cpp  dependency.cpp  dependency.hpp  errors.hpp  library_store.cpp  library_store.hpp  logger.cpp  logger.hpp  working_context_impl.cpp  working_context_impl.hpp
app/src/config/: condition.cpp  dependency_spec.cpp  library.cpp  library_entry.cpp  option_value.cpp  step_def.cpp
app/src/config/impl/: condition_and_op_impl.cpp  condition_and_op_impl.hpp  condition_and_or_op_impl.cpp  condition_and_or_op_impl.hpp  condition_equal_op_impl.cpp  condition_equal_op_impl.hpp  condition_is_false_op_impl.cpp  condition_is_false_op_impl.hpp  condition_is_op_impl.cpp  condition_is_op_impl.hpp  condition_is_true_op_impl.cpp  condition_is_true_op_impl.hpp  condition_or_op_impl.cpp  condition_or_op_impl.hpp  step_cmake_configure_impl.cpp  step_cmake_configure_impl.hpp  step_cmake_install_all_impl.cpp  step_cmake_install_all_impl.hpp  step_download_impl.cpp  step_download_impl.hpp  step_extract_impl.cpp  step_extract_impl.hpp  step_github_download_impl.cpp  step_github_download_impl.hpp  step_install_file_impl.cpp  step_install_file_impl.hpp  step_wget_impl.cpp  step_wget_impl.hpp
app/src/utils/: base32.cpp  hash.cpp  hash_win32.cpp  option_value.cpp  path.cpp  string.cpp  string_expander.cpp  subprocess.cpp
app/src/utils/impl/: generator.hpp  hash_linux.cpp  hash_linux.hpp  hash_win32.cpp  hash_win32.hpp
app/test/utils/: base32.cpp  hash.cpp  option_value.cpp  string.cpp  string_expander.cpp  utils_main.cpp
cmake/: Config.cmake.in  utils.cmake
cmake/doxygen/: Doxyfile.in  doxygen.cmake
libs/: CLIUtils.CLI11.jsonc  gabime.spdlog.jsonc  madler.zlib.jsonc  nlohmann.json.jsonc
test_project/: CMakeLists.txt  deps.full.toml  deps.toml
